added linkedin logo

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,10 @@
 
   {% endif %}
 
+  {% if site.google_analytics %}
+    {% include google_analytics.html %}
+  {% endif %}
+
   <style class="inlineCSS">
 
     {% include critical.css %}
